package de.cocondo.app.domain.personnel.assignment;

/**
 * Type of a position filling (base contract vs temporary increase).
 * Typ der Stellenbesetzung (Grundbindung vs befristete Aufstockung)
 */
public enum PositionFillingType {
    BASE_CONTRACT,      // Grund-Arbeitsvertrag
    TEMPORARY_INCREASE  // Befristete Aufstockung
}
