package de.cocondo.app.domain.personnel.person;

/**
 * Gender of a natural person.
 *
 * Stored as STRING in the database.
 */
public enum Gender {

    MALE,
    FEMALE,
    DIVERSE,
    UNKNOWN
}
