package de.cocondo.app.domain.personnel.staffing;

/**
 * Planungsvariante: z.B. REAL vs SIMULATION.
 */
public enum PlanVariantType {
    APPROVED,
    SCENARIO
}
